# AAD-Associative-Activation-Diffusion

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/aad/: __init__.py  agent.py  cli.py  config.py  embedder.py  errors.py  models.py  seed.py  session.py  store.py  tools.py  vector_index.py
tests/: test_agent.py  test_embedder.py  test_errors.py  test_integration.py  test_models.py  test_seed.py  test_session.py  test_store.py  test_tools.py  test_vector_index.py
